--- a/grid+flex/practica grid bolitas/css/style.css
+++ b/grid+flex/practica grid bolitas/css/style.css
@@ -127,3 +127,13 @@ p {
 	margin:10px;
 	padding: 40px;;
 }
+
+
+@media screen and (max-width: 800px) {
+	.grid-wrapper{
+		display:flex;
+		flex-direction: column;
+		align-items: center;
+	}
+	
+}
